force-app/main/default/objects/Payment_Transaction_POE__c/Payment_Transaction_POE__c.object-meta.xml
<CustomObject>
    <label>Payment Transaction</label>
    <nameField>
        <displayFormat>{YY}{00000000}</displayFormat>
        <label>Payment Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>