force-app/main/default/objects/Payment_Transaction_POE__c/fields/amount_surcharge__c.field-meta.xml
<CustomField>
    <fullName>amount_surcharge__c</fullName>
    <inlineHelpText>This is any surcharge amount that may be charged such as a VISA, MasterCard or AMEX fee.</inlineHelpText>
    <label>Amount Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>