force-app/main/default/objects/Payment_Transaction_POE__c/fields/Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account__c</fullName>
    <formula>if(
   Company__c = &quot;Trip A Deal Pty Limited&quot;,
   &quot;1010 - Trip A Deal Pty Ltd - Working&quot;,
   &quot;1020 - TripADeal (NZ) Limited&quot;
)
/*if(
   Company__c = &quot;Trip A Deal Pty Limited&quot;,
   &quot;600 - Trip A Deal Pty Ltd - Working&quot;,
   &quot;601 - Tripadeal NZ Working Account&quot;
)*/</formula>
    <label>Bank Account</label>
    <type>Text</type>
</CustomField>