force-app/main/default/objects/Payment_Transaction_POE__c/fields/comments__c.field-meta.xml
<CustomField>
    <fullName>comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>