force-app/main/default/objects/Payment_Transaction_POE__c/fields/crn1__c.field-meta.xml
<CustomField>
    <fullName>crn1__c</fullName>
    <label>CRN1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>