force-app/main/default/objects/Payment_Transaction_POE__c/fields/crn2__c.field-meta.xml
<CustomField>
    <fullName>crn2__c</fullName>
    <label>CRN2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>