force-app/main/default/objects/Payment_Transaction_POE__c/fields/currency_code__c.field-meta.xml
<CustomField>
    <fullName>currency_code__c</fullName>
    <label>Currency Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AUD</fullName>
            </value>
            <value>
                <fullName>NZD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>