force-app/main/default/objects/Payment_Transaction_POE__c/fields/FFStatus__c.field-meta.xml
<CustomField>
    <fullName>FFStatus__c</fullName>
    <label>FFStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unprocessed</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>