force-app/main/default/objects/Payment_Transaction_POE__c/fields/method__c.field-meta.xml
<CustomField>
    <fullName>method__c</fullName>
    <label>Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PayPX</fullName>
            </value>
            <value>
                <fullName>Ingenico</fullName>
            </value>
            <value>
                <fullName>BPoint</fullName>
            </value>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>zipMoney</fullName>
                <label>zipmoney</label>
            </value>
            <value>
                <fullName>Paypal</fullName>
                <label>PayPal</label>
            </value>
            <value>
                <fullName>Coupon</fullName>
            </value>
            <value>
                <fullName>Poli</fullName>
                <label>POLi</label>
            </value>
            <value>
                <fullName>eNett</fullName>
            </value>
            <value>
                <fullName>TravelTek</fullName>
            </value>
            <value>
                <fullName>VT Transaction</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>BPAY</fullName>
            </value>
            <value>
                <fullName>QFF</fullName>
            </value>
            <value>
                <fullName>LatitudePay</fullName>
            </value>
            <value>
                <fullName>PayTo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>