force-app/main/default/objects/Payment_Transaction_POE__c/fields/Negative_Amount_Original__c.field-meta.xml
<CustomField>
    <fullName>Negative_Amount_Original__c</fullName>
    <formula>- amount_original__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Negative Amount Original</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>