force-app/main/default/objects/Payment_Transaction_POE__c/fields/Order_No__c.field-meta.xml
<CustomField>
    <fullName>Order_No__c</fullName>
    <label>Order No</label>
    <length>18</length>
    <type>Text</type>
</CustomField>