force-app/main/default/objects/Payment_Transaction_POE__c/fields/paid_by_email__c.field-meta.xml
<CustomField>
    <fullName>paid_by_email__c</fullName>
    <label>Paid By Email</label>
    <length>72</length>
    <type>Text</type>
</CustomField>