force-app/main/default/objects/Payment_Transaction_POE__c/fields/Process_PT__c.field-meta.xml
<CustomField>
    <fullName>Process_PT__c</fullName>
    <formula>and(
 transaction_idenifier__c &lt;&gt; &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process PT</label>
    <type>Checkbox</type>
</CustomField>