force-app/main/default/objects/Payment_Transaction_POE__c/fields/Processed_PT__c.field-meta.xml
<CustomField>
    <fullName>Processed_PT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed PT</label>
    <type>Checkbox</type>
</CustomField>