force-app/main/default/objects/Payment_Transaction_POE__c/fields/QFF_Points__c.field-meta.xml
<CustomField>
    <fullName>QFF_Points__c</fullName>
    <label>QFF Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>