force-app/main/default/objects/Payment_Transaction_POE__c/fields/reference_number__c.field-meta.xml
<CustomField>
    <fullName>reference_number__c</fullName>
    <description>Used by web to link to order</description>
    <inlineHelpText>Used by web to link to order</inlineHelpText>
    <label>Reference Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>