force-app/main/default/objects/Payment_Transaction_POE__c/fields/Settlement_Date__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Date__c</fullName>
    <formula>CASE(mid(text(CreatedDate), 12,4), &quot;06:3&quot;, CreatedDate+(1/2),&quot;06:4&quot;, CreatedDate+(1/2),&quot;06:5&quot;, CreatedDate+(1/2),&quot;07:0&quot;, CreatedDate+(1/2),&quot;07:1&quot;, CreatedDate+(840/1440),&quot;07:2&quot;, CreatedDate+(840/1440),&quot;07:3&quot;, CreatedDate+(840/1440),&quot;07:4&quot;, CreatedDate+(840/1440),&quot;07:5&quot;, CreatedDate+(840/1440),&quot;08:0&quot;, CreatedDate+(840/1440),&quot;08:1&quot;, CreatedDate+(840/1440),&quot;08:2&quot;, CreatedDate+(840/1440),&quot;08:3&quot;, CreatedDate+(840/1440),&quot;08:4&quot;, CreatedDate+(840/1440),&quot;08:5&quot;, CreatedDate+(840/1440),&quot;09:0&quot;, CreatedDate+(840/1440),&quot;09:1&quot;, CreatedDate+(840/1440),&quot;09:2&quot;, CreatedDate+(840/1440),&quot;09:3&quot;, CreatedDate+(840/1440),&quot;09:4&quot;, CreatedDate+(840/1440),&quot;09:5&quot;, CreatedDate+(840/1440),&quot;10:0&quot;, CreatedDate+(840/1440),&quot;10:1&quot;, CreatedDate+(840/1440),&quot;10:2&quot;, CreatedDate+(840/1440),&quot;10:3&quot;, CreatedDate+(840/1440), &quot;10:4&quot;, CreatedDate+(840/1440), &quot;10:5&quot;, CreatedDate+(840/1440), &quot;11:&quot;, CreatedDate+(840/1440), CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Settlement Date</label>
    <type>DateTime</type>
</CustomField>