force-app/main/default/objects/Payment_Transaction_POE__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <formula>VALUE( MID( TEXT(  CreatedDate  + 10/24 ), 12, 2) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>