force-app/main/default/objects/Payment_Transaction_POE__c/fields/transaction_idenifier__c.field-meta.xml
<CustomField>
    <fullName>transaction_idenifier__c</fullName>
    <caseSensitive>true</caseSensitive>
    <inlineHelpText>This field is to help identify the transaction entry in the transaction method system. For example, a BPOINT Reciept,  a ZipMoney Reference, a Bank transfer reference etc.</inlineHelpText>
    <label>Transaction Identifier</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>