force-app/main/default/objects/Payment_Transaction_POE__c/fields/transaction_type__c.field-meta.xml
<CustomField>
    <fullName>transaction_type__c</fullName>
    <label>Transaction Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>