force-app/main/default/objects/Payment_Transaction_POE__c/validationRules/Amount_cannot_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_cannot_be_negative</fullName>
    <active>true</active>
    <description>if payment method = Payment then fields Amount Original, Amount Charged don&apos;t have negative values</description>
    <errorConditionFormula>AND(
ISPICKVAL(transaction_type__c, &apos;Payment&apos;),
OR(
amount_original__c &lt; 0 ,
amount_charged__c &lt; 0)
)</errorConditionFormula>
    <errorMessage>Amount cannot be Negative</errorMessage>
</ValidationRule>