force-app/main/default/objects/Payment_Transaction_POE__c/validationRules/Expired_Order_payment_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Expired_Order_payment_rule</fullName>
    <active>true</active>
    <description>Error if order status = Expired</description>
    <errorConditionFormula>AND(ISPICKVAL(ordexp_tad_order__r.ordexp_master_status__c, &quot;Cancelled&quot;),ISPICKVAL(ordexp_tad_order__r.ordexp_sub_status__c,&quot;Expired/Time out&quot;))</errorConditionFormula>
    <errorMessage>Order is Expired - you cannot add a payment to this order</errorMessage>
</ValidationRule>