force-app/main/default/objects/Payment_Transaction_POE__c/validationRules/Negative_Numbers.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_Numbers</fullName>
    <active>true</active>
    <description>Refunds must be a negative amount.</description>
    <errorConditionFormula>AND(
CONTAINS(TEXT(transaction_type__c),&quot;Refund&quot;), 
OR(amount_original__c &gt; 0,
amount_surcharge__c &gt; 0)
)</errorConditionFormula>
    <errorMessage>Refund amount original must be negative</errorMessage>
</ValidationRule>