force-app/main/default/objects/Payment_Transaction_POE__c/listViews/Received_BSB_Payments_7_days.listView-meta.xml
<ListView>
    <fullName>Received_BSB_Payments_7_days</fullName>
    <columns>NAME</columns>
    <columns>method__c</columns>
    <columns>amount_charged__c</columns>
    <columns>comments__c</columns>
    <columns>transaction_date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>method__c</field>
        <operation>equals</operation>
        <value>Bank Transfer</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Belinda Ladner</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Received BSB Payments &gt; 7 days</label>
    <sharedTo>
        <group>CS_Manager</group>
        <group>Finance</group>
        <group>Team_Leaders_CS</group>
        <group>Travel_Consultants_CS</group>
    </sharedTo>
</ListView>